Fixed the toppling up of the primary heading element by hiding the backface visibility

--- a/css/style.css
+++ b/css/style.css
@@ -51,7 +51,7 @@ body {
 .heading-primary {
     color: #fff;
     text-transform: uppercase;
-    /* backface-visibility: hidden; */
+    backface-visibility: hidden;
 }
 
 .heading-primary-main {
